styles: used module and made the bg darker

--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,11 @@ html {
 
 body {
   font-family: "Lato", serif;
-  background-image: url('/src/assets/weather-bg.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/src/assets/weather-bg.jpg');
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
   color: var(--white);
   position: relative;
+  overflow: hidden;
 }
-
