feat: update form component to use react-hook-form for improved validation and error handling

--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -28,6 +28,13 @@
   color: var(--white);
 }
 
+.error {
+  color: #FF5D5D;
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-top: 0.25rem;
+}
+
 .submit {
   background-color: var(--primary);
   border: none;
